--- a/Templates/create_poll.html
+++ b/Templates/create_poll.html
@@ -4,15 +4,22 @@
 <form method="POST">
     <h3 align="center">Create your Poll</h3>
     <div class="form-group">
-        <label for="Question">Question</label>
-        <textarea class="form-control" id="Question" rows="3"></textarea>
+        <label for="question">Question</label>
+        <textarea class="form-control" id="question" name="question" rows="3"></textarea>
     </div>
     <div class="form-group">
-        <label for="Answer">Option</label>
-        <input type="text" class="form-control" id="question_text" name="question_text" placeholder="Enter text..." />
+        <label for="option">Option</label>
+        <input type="text" class="form-control" id="option" name="option" placeholder="Enter text..." />
     </div>
-    <br />
-    <button type="submit" class="btn btn-primary">Create</button>
+    <div class="form-group">
+        <label for="option">Option</label>
+        <input type="text" class="form-control" id="option1" name="option1" placeholder="Enter text..." />
+    </div>
+
+
+    <button type="button" class="btn btn-primary pull-left">Add option</button>
+    <button type="submit" class="btn btn-primary pull-right">Create</button>
+    
 </form>
 
 {% endblock %}
