Refactored backend and restructured python module for architecture

--- a/Templates/create_poll.html
+++ b/Templates/create_poll.html
@@ -9,7 +9,7 @@
     </div>
     <div class="form-group">
         <label for="option">Option</label>
-        <input type="text" class="form-control" id="option" name="option" placeholder="Enter text..." />
+        <input type="text" class="form-control" id="option" name="option0" placeholder="Enter text..." />
     </div>
     <div class="form-group">
         <label for="option">Option</label>
