removed trivial Static folder created 404 template created answer poll frontend wrote choices of question to choice table queried question and displayed data on answer_poll frontend updated init file to test database - server connection updates routes file for all of the backend changes added link for share poll page

--- a/Templates/create_poll.html
+++ b/Templates/create_poll.html
@@ -2,7 +2,7 @@
 %}
 <br />
 <form method="POST">
-    <h3 align="center">Create your Poll</h3>
+    <h3 style="text-align: center">Create your Poll</h3>
     <div class="form-group">
         <label for="question">Question</label>
         <textarea class="form-control" id="question" name="question" rows="3"></textarea>
