--- a/Templates/answer_poll.html
+++ b/Templates/answer_poll.html
@@ -5,19 +5,24 @@
 <form method="POST">
     <h3 style="text-align: center">{{question}}</h3>
     <div>
-        <div class="row">
-            <div class="col">
-            <div class="form-group" id="list-tab" role="tablist">
-                {% for row in data %}
-                    <a class="list-group-item list-group-item-action" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">{{ row['text'] }}</a>
-                {% endfor %}
-            </div>
-            </div>
-        </div>
+        {% for row in data.keys() %}
+            <input type="checkbox" id={{ data[row]['choice'] }} name="keys" value={{ data[row]['choice'] }}>
+            <label for={{ data[row]['choice'] }}>{{ data[row]['text'] }}</label><br>
+        {% endfor %}
     </div>
 <br/>
 <button type="submit" class="btn btn-primary pull-right">Submit</button>
-
 </form>
 
 {% endblock %}
+
+
+<!-- <div class="col">
+    <div class="list-group" id="list-tab" role="tablist">
+        {% for row in data %}
+        <button type="button" class="list-group-item list-group-item-action" id={{ row['choice'] }}
+            data-toggle="list">{{ row['text'] }}</button>
+        <label><input type="checkbox" name={{row["text"]}}>{{row['text']}}</label>
+        {% endfor %}
+    </div>
+</div> -->
