--- a/Templates/history.html
+++ b/Templates/history.html
@@ -1,3 +1,14 @@
 {% extends "base.html" %} {% block title %}Pollster: View Polls{% endblock %} {% block content
 %}
+<form metho="POST">
+<h3 class="text-align: center">See Popular Polls!</h3>
+<div>
+    {% for row in data.keys() %}
+            <input type="button" id= name= value=>
+            <label for=>{{  }}</label><br>
+    {% endfor %}
+</div>
+</form>
+
+
 {% endblock %}
