--- a/Templates/answer_poll.html
+++ b/Templates/answer_poll.html
@@ -11,7 +11,7 @@
         {% endfor %}
     </div>
 <br/>
-<button type="submit" class="btn btn-primary pull-right">Submit</button>
+<button type="submit" class="btn btn-primary btn-lg btn-block">Submit</button>
 </form>
 
 {% endblock %}
