--- a/Templates/base.html
+++ b/Templates/base.html
@@ -21,8 +21,8 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" id="home" href="/">Home</a>
         <a class="nav-item nav-link" id="create_poll" href="/create_poll">Create Poll</a>
-        <a class="nav-item nav-link" id="history" href="/history">History</a>
         <a class="nav-item nav-link" id="search" href="/search">Find Poll</a>
+        <a class="nav-item nav-link" id="history" href="/history">Poll History</a>
       </div>
     </div>
   </nav>
