--- a/Templates/create_poll.html
+++ b/Templates/create_poll.html
@@ -2,23 +2,42 @@
 %}
 <br />
 <form method="POST">
-    <h3 style="text-align: center">Create your Poll</h3>
+    <head>  
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>  
+    </head>
+
+    <h3 style="text-align: center">Create Poll</h3>
     <div class="form-group">
-        <label for="question">Question</label>
+        <label for="question">Poll Question</label>
         <textarea class="form-control" id="question" name="question" rows="3"></textarea>
     </div>
-    <div class="form-group">
-        <label for="option">Option</label>
-        <input type="text" class="form-control" id="option" name="option0" placeholder="Enter text..." />
-    </div>
-    <div class="form-group">
-        <label for="option">Option</label>
-        <input type="text" class="form-control" id="option1" name="option1" placeholder="Enter text..." />
-    </div>
+      
+    <body> <button type="button" class="btn btn-primary pull-left" id="Add">Add Option</button><button type="button" class="btn btn-primary pull-right" id="Remove">Remove Option</button>  
+        <br><br>
+        <div class="form-group">
+            <label for="option">Option</label>
+            <input type="text" class="form-control" id="option" name="option" placeholder="Enter text..." />
+        </div>
+        <div class="form-group">
+            <label for="option">Option</label>
+            <input type="text" class="form-control" id="option" name="option" placeholder="Enter text..." />
+        </div>
+        <div id="textboxDiv"></div>
+        <script>  
+            $(document).ready(function() {  
+                $("#Add").on("click", function() {  
+                    $("#textboxDiv").append("<div class='form-group'><label for='option'>Option</label><input type='text' class='form-control' id='option' name='option' placeholder='Enter text...' /></div>");  
+                });  
+                $("#Remove").on("click", function() {  
+                    $("#textboxDiv").children().last().remove();  
+                });  
+            });  
+        </script>  
+    </body>
 
 
-    <button type="button" class="btn btn-primary pull-left">Add option</button>
-    <button type="submit" class="btn btn-primary pull-right">Create</button>
+    <!-- <button type="button" class="btn btn-primary pull-left">Add Option</button> -->
+    <button type="submit" class="btn btn-primary btn-lg btn-block">Create</button>
     
 </form>
 
