--- a/Templates/share_poll.html
+++ b/Templates/share_poll.html
@@ -3,7 +3,7 @@
 
 <br />
 <form method="GET">
-    <h3 style="text-align: center">Share the Question you created to see the results!</h3>
+    <h3 style="text-align: center">Your poll has been created!</h3>
     <p>Here's your shareable link: <a href="url">{{share}}</a>
     </p>
 </form>
