- Commiting changes before merging Nick's code into this temp branch

--- a/Templates/share_poll.html
+++ b/Templates/share_poll.html
@@ -2,9 +2,9 @@
 %}
 
 <br />
-<form method="GET">
+<form method="POST">
     <h3 style="text-align: center">Share the Question you created to see the results!</h3>
-    <p>Here's your shareable link: <a href="url">{{ share }}</a>
+    <p>Here's your shareable link: <a href={{share}}>{{ share }}</a>
     </p>
 </form>
 
