--- a/Templates/share_poll.html
+++ b/Templates/share_poll.html
@@ -3,8 +3,8 @@
 
 <br />
 <form method="POST">
-    <h3 style="text-align: center">Share the Question you created to see the results!</h3>
-    <p>Here's your shareable link: <a href={{share}}>{{ share }}</a>
+    <h3 style="text-align: center">Poll Created!</h3>
+    <p>Here's your shareable link: <a href={{share}}>{{share}}</a>
     </p>
 </form>
 
