Graphing works in real time

--- a/Templates/history.html
+++ b/Templates/history.html
@@ -5,7 +5,7 @@
 <div>
     {% for row in data.keys() %}
             <input type="button" id= name= value=>
-            <label for=>{{  }}</label><br>
+            <label for=>{{ row }}</label><br>
     {% endfor %}
 </div>
 </form>
