--- a/Templates/base.html
+++ b/Templates/base.html
@@ -23,6 +23,7 @@
         <a class="nav-item nav-link" id="create_poll" href="/create_poll">Create Poll</a>
         <a class="nav-item nav-link" id="search" href="/search">Find Poll</a>
         <a class="nav-item nav-link" id="history" href="/history">Poll History</a>
+        <a class="nav-item nav-link" id="login" href="/login">Login</a>
       </div>
     </div>
   </nav>
