--- a/Templates/admin.html
+++ b/Templates/admin.html
@@ -10,7 +10,7 @@
     </div>
     <div class="form-group">
         <label for="passowrd">Password</label>
-        <input type="password" class="form-control" id="password" placeholder="Password">
+        <input type="password" class="form-control" id="password" placeholder="password">
     </div>
     <button type="login" class="btn btn-primary">Login</button>
 </form>
