update dec 2 445pm

--- a/Templates/history.html
+++ b/Templates/history.html
@@ -14,6 +14,7 @@
             <br>
             <label>Responses: {{row[8]}}</label>
             <br>
+            <!--button "edit poll"-->
             <br>
     {% endfor %}
 </div>
