--- a/Templates/admin.html
+++ b/Templates/admin.html
@@ -9,8 +9,8 @@
         <input type="text" class="form-control" id="username" name="username" placeholder="username" />
     </div>
     <div class="form-group">
-        <label for="passowrd">Password</label>
-        <input type="password" class="form-control" id="password" placeholder="Password">
+        <label for="password">Password</label>
+        <input type="password" class="form-control" id="password" name="password" placeholder="password">
     </div>
     <button type="login" class="btn btn-primary">Login</button>
 </form>
