update dec2 640pm

--- a/Templates/history.html
+++ b/Templates/history.html
@@ -14,7 +14,7 @@
             <br>
             <label>Responses: {{row[8]}}</label>
             <br>
-            <!--button "edit poll"-->
+            <<button type="submit" class="btn btn-primary btn-lg btn-block">Edit</button>
             <br>
     {% endfor %}
 </div>
