--- a/Templates/admin.html
+++ b/Templates/admin.html
@@ -1,18 +1,17 @@
-{% extends "base.html" %} {% block title %}Pollster: Admin Login{% endblock %} {% block content
-%}
-    
+{% extends "base.html" %}
+{% block title %}Pollster: Admin Login{% endblock %}
+{% block content %}
+<br>
 <h3 style="text-align: center">Login</h3>
-
 <form method="POST">
     <div class="form-group">
         <label for="username">Username</label>
-        <input type="text" class="form-control" id="username" name="username" placeholder="username" />
+        <input type="text" class="form-control" id="username" name="username" placeholder="username">
     </div>
     <div class="form-group">
-        <label for="check">Password</label>
-        <input type="check" class="form-control" id="password" name="password" placeholder="password">
+        <label for="password">Password</label>
+        <input type="password" class="form-control" id="password" name="password" placeholder="password">
     </div>
-    <button type="login" class="btn btn-primary">Login</button>
+    <button type="submit" class="btn btn-primary">Login</button>
 </form>
-
 {% endblock %}
