--- a/Templates/answer_poll.html
+++ b/Templates/answer_poll.html
@@ -1,28 +1,17 @@
-{% extends "base.html" %} {% block title %}Pollster: Answer Poll{% endblock %} {% block content
-%}
-
-<br/>
+{% extends "base.html" %}
+{% block title %}Pollster: Answer Poll{% endblock %}
+{% block content %}
+<br>
+<h3 style="text-align: center">{{question}}</h3>
 <form method="POST">
-    <h3 style="text-align: center">{{question}}</h3>
     <div>
         {% for row in data.keys() %}
-            <input type="checkbox" id={{ data[row]['choice'] }} name="keys" value={{ data[row]['choice'] }}>
-            <label for={{ data[row]['choice'] }}>{{ data[row]['text'] }}</label><br>
+            <input type="checkbox" id={{data[row]['choice']}} name="keys" value={{data[row]['choice']}}>
+            <label for={{data[row]['choice']}}>{{data[row]['text']}}</label>
+            <br>
         {% endfor %}
     </div>
-<br/>
+<br>
 <button type="submit" class="btn btn-primary btn-lg btn-block">Submit</button>
 </form>
-
 {% endblock %}
-
-
-<!-- <div class="col">
-    <div class="list-group" id="list-tab" role="tablist">
-        {% for row in data %}
-        <button type="button" class="list-group-item list-group-item-action" id={{ row['choice'] }}
-            data-toggle="list">{{ row['text'] }}</button>
-        <label><input type="checkbox" name={{row["text"]}}>{{row['text']}}</label>
-        {% endfor %}
-    </div>
-</div> -->
