stylistic changes, also added functionality for entering a poll that doesn't exist in the manage polls section

--- a/Templates/home.html
+++ b/Templates/home.html
@@ -1,9 +1,9 @@
-{% extends "base.html" %} {% block title %}Pollster: Home{% endblock %} {% block content
-%}
-
+{% extends "base.html" %}
+{% block title %}Pollster: Home{% endblock %}
+{% block content %}
 <br>
+<h3 style="text-align: center">Welcome to Pollster</h3>
 <form method="POST">
-    <h3 style="text-align: center">Welcome to Pollster</h3>
     <br>
     <a class="btn btn-primary btn-lg btn-block" href="/create_poll" role="button">Create Poll</a>
     <br>
